===Changelog for NEI Recipe Handlers===
Made by 'Crafted_Mods' or 'The_Ranger_Malvegil'

#1.1.0-BETA:
 + Added extended MineTweaker/CraftTweaker support for the base crafting grid handler
 + A list of loaded modules is now added to crash reports

#1.0.2-BETA:
 * Fixed an exception ocurring if recipes with 'null' as result were loaded

#1.0.1-BETA:
 * Fixed that multiple resource handlers overwrite each others lang file entries

#1.0.0-BETA:
 + Added an "isNEIGuiOpen" function
 + Added information about the loaded recipe handler units to the modlist description
 + Added MineTweaker/CraftTweaker support
 + Added a recipe handler for the vanilla crafting table which can be modified by plugins
 + Added support for a button which show all recipes of the specified handler
 
 * Fixed that disabling recipe handlers via the configuration didn't work sometimes
 * Fixed an exception when the complicated static recipe loading iteration depth was 0

#2.0.2-ALPHA:
 + Updated FastClasspathScanner to v2.21

 * Fixed a crash with broken recipes
 * Improved the performance of the version checker
 * Fixed that older remote versions were described as current ones in the logs
 * Fixed that item override names weren't updated if the language was changed
 * Replaced the item cache with an environment cache, which tracks all installed mods

#2.0.1-ALPHA:
 + Updated FastClasspathScanner

#2.0.0-ALPHA:
 + Added resource handler support
 + Added version checker support
 
 * Moved the function getVersion from RecipeHandler to RecipeHandlerCacheManager
 * Fixed that the item cache sometimes did corrupt some recipes
 
 - Removed the resource loading functions from RecipeHandler and RecipeHandlerFactory
 - Removed a version checker related function from RecipeHandler

#1.0.0-ALPHA:
 + Initial release