@@ -3,6 +3,7 @@ Made by 'Crafted_Mods' or 'The_Ranger_Malvegil'
 
 #1.1.0-BETA:
  + Added extended MineTweaker/CraftTweaker support for the base crafting grid handler
+ + Added new ItemStack comparison handlers
  + A list of loaded modules is now added to crash reports
 
 #1.0.2-BETA:
